--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -159,52 +159,28 @@ eleventyNavigation:
                     </span>
                 </button>
                 <p class="cs-item-p">
-                    Some cleaning plans require a minimum commitment term. Cancelling your plan before the minimum term is complete will result in a $99 fee. If you want to learn more information about how to cancel, please inbox us.
+                    We provide a wide range of plumbing services, including water heater tank installation, tankless water heater installation, furnace services, gasfitting, sump pump installation and repair, drain cleaning, garage heater installation, water softener services, and plumbing fixture repairs.
                 </p>
             </li>
             <li class="cs-faq-item">
                 <button class="cs-button">
                     <span class="cs-number">2</span>
                     <span class="cs-button-text">
-                        Do you offer financing options for plumbing and renovation services?
-                    </span>
+                        How long do renovations take?                    </span>
                 </button>
                 <p class="cs-item-p">
-                    Yes, we offer financing options for plumbing and renovation projects ranging from $2,000 to $100,000. Please contact us to discuss the available financing plans and find out which option best suits your needs.                </p>
-            </li>
+                    The duration of renovations depends on the scope of the project. We work efficiently to complete jobs on time while maintaining high-quality standards. For a more accurate timeline, we recommend scheduling a consultation.            </li>
             <li class="cs-faq-item">
                 <button class="cs-button">
                     <span class="cs-number">3</span>
                     <span class="cs-button-text">
-                        How can I get a quote for my renovation project?
-                    </span>
+                        What should I do in a plumbing emergency?                    </span>
                 </button>
                 <p class="cs-item-p">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit convallis nunc neque, bibendum pulvinar vitae commodo velit. Proin diam tortor sed malesuada nunc, habitant. Dignissim ipsum porta enim, magna urna, quam. 
-                </p>
+                    In a plumbing emergency, shut off the water supply to prevent further damage and contact us immediately. Our team is ready to respond and provide fast, reliable emergency plumbing services.                </p>
             </li>
-            <li class="cs-faq-item">
-                <button class="cs-button">
-                    <span class="cs-number">4</span>
-                    <span class="cs-button-text">
-                        How long will my renovation project take?
-                    </span>
-                </button>
-                <p class="cs-item-p">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit convallis nunc neque, bibendum pulvinar vitae commodo velit. Proin diam tortor sed malesuada nunc, habitant. Dignissim ipsum porta enim, magna urna, quam. 
-                </p>
-            </li>
-            <li class="cs-faq-item">
-                <button class="cs-button">
-                    <span class="cs-number">5</span>
-                    <span class="cs-button-text">
-                        What should I do if I have a plumbing emergency?
-                    </span>
-                </button>
-                <p class="cs-item-p">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit convallis nunc neque, bibendum pulvinar vitae commodo velit. Proin diam tortor sed malesuada nunc, habitant. Dignissim ipsum porta enim, magna urna, quam. 
-                </p>
-            </li>
+            
+           
         </ul>
     </div>
     <!--Grey Swirl -->
