--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -77,9 +77,9 @@ eleventyNavigation:
                 </li>
                 <li class="cs-item">
                     <picture class="cs-image" aria-hidden="true">
-                        <source media="(max-width: 600px)" srcset="/assets/images/gal7.jpg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/gal7.jpg">
-                        <img loading="lazy" decoding="async" src="/assets/images/gal7.jpg" alt="fire hydrant" width="413" height="320">
+                        <source media="(max-width: 600px)" srcset="/assets/images/blogrenov.jpg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/blogrenov.jpg">
+                        <img loading="lazy" decoding="async" src="/assets/images/blogrenov.jpg" alt="fire hydrant" width="413" height="320">
                     </picture>
                     <div class="cs-flex">
                         <span class="cs-date">8 March, 2024</span>
