--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@ eleventyNavigation:
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
             <picture class="cs-background">
-                <source media="(max-width: 600px)" srcset="/assets/images/m1.png">
+                <source media="(max-width: 600px)" srcset="/assets/images/m1.webp">
                 <source media="(min-width: 601px)" srcset="/assets/images/1.png">
                 <img decoding="async" src="/assets/images/1.png" alt="" width="2250" height="1500" aria-hidden="true">
             </picture>
@@ -72,7 +72,7 @@ eleventyNavigation:
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
          
             <picture class="cs-background">
-                <source media="(max-width: 600px)" srcset="/assets/images/m2.png">
+                <source media="(max-width: 600px)" srcset="/assets/images/m2.webp">
                 <source media="(min-width: 601px)" srcset="/assets/images/2.png">
                 <img decoding="async" src="/assets/images/2.png" alt="" width="2250" height="1500" aria-hidden="true">
             </picture>
@@ -83,7 +83,7 @@ eleventyNavigation:
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             
             <picture class="cs-background">
-                <source media="(max-width: 600px)" srcset="/assets/images/m3.png">
+                <source media="(max-width: 600px)" srcset="/assets/images/m3.webp">
                 <source media="(min-width: 601px)" srcset="/assets/images/3.png">
                 <img decoding="async" src="/assets/images/3.png" alt="" width="2250" height="1500" aria-hidden="true">
             </picture>
