--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -2,7 +2,7 @@
 title: 'Plumbing & Heating| Montano Plumbing & Contracting LTD.'
 description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'about/'
+permalink: 'plumbing-and-heating/'
 eleventyNavigation:
     key: Plumbing & Heating
     order: 200
@@ -217,7 +217,7 @@ Doing this will complete the overlapping "breaking the container" look.
                         <source media="(min-width: 601px)" srcset="/assets/images/plumbingfixture.jpg">
                         <img loading="lazy" decoding="async" src="/assets/images/plumbingfixture.jpg" alt="room" width="413" height="420">
                     </picture>
-                    <h3 class="cs-h3">Plumbing Fixture and Repairg</h3>
+                    <h3 class="cs-h3">Plumbing Fixture and Repair</h3>
                     <p class="cs-item-text">
                         Affordable and reliable plumbing repairs and fixture installations for every home.
 
