--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -41,14 +41,14 @@ eleventyNavigation:
 <!--                    Blog                      -->
 <!-- ============================================ -->
 
-<section id="blog-1654">
+<!-- <section id="blog-1654">
     <div class="cs-container">
         <div class="cs-content">
-            <picture class="cs-picture">
+            <picture class="cs-picture"> -->
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/mpclogo1.png">
+                <!-- <source media="(max-width: 600px)" srcset="/assets/images/mpclogo1.png"> -->
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/mpclogo1.png">
+                <!-- <source media="(min-width: 601px)" srcset="/assets/images/mpclogo1.png">
                 <img loading="lazy" decoding="async" src="/assets/images/mpclogo1.png" alt="busines meeting" width="413" height="652" aria-hidden="true">
             </picture>
             <div class="cs-text-wrapper">
@@ -60,9 +60,9 @@ eleventyNavigation:
             <ul class="cs-card-group">
                 <li class="cs-item">
                     <picture class="cs-image" aria-hidden="true">
-                        <source media="(max-width: 600px)" srcset="/assets/images/blogpost1.jpg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/blogpost1.jpg">
-                        <img loading="lazy" decoding="async" src="/assets/images/blogpost1.jpg" alt="windmill" width="413" height="320">
+                        <source media="(max-width: 600px)" srcset="/assets/images/plumbingserviceshero.jpg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/plumbingserviceshero.jpg">
+                        <img loading="lazy" decoding="async" src="/assets/images/plumbingserviceshero.jpg" alt="windmill" width="413" height="320">
                     </picture>
                     <div class="cs-flex">
                         <span class="cs-date">29 Oct, 2023</span>
@@ -96,7 +96,7 @@ eleventyNavigation:
         </div>
     </div>
 </section>
-                                   
+                                    -->
 
 
 
