--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -2,7 +2,7 @@
 title: 'Contact | Montano Plumbing & Contracting LTD.'
 description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'contact-us/'
+permalink: 'contact/'
 eleventyNavigation:
     key: Contact Us
     order: 400
