--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -130,6 +130,9 @@ eleventyNavigation:
         <div class="cs-content">
             <span class="cs-topper">Gallery</span>
             <h2 class="cs-title">Our Previous Projects</h2>
+            <div class="cs-description"><p>Welcome to our gallery showcasing the transformations we've brought to life for our satisfied clients. Let us know how we can help bring your vision to reality!"
+                Also, check if all gallery photos are complete.</p></div>
+            
         </div>
         <div class="cs-image-group">
             <div class="cs-row cs-row-1">
