--- a/src/index.html
+++ b/src/index.html
@@ -587,7 +587,7 @@ eleventyNavigation:
                 Trust MPC for quality service and lasting peace of mind.
                 <br><br>
             
-                Licensed and Insured,</h4>
+                Licensed and Insured</h4>
 
 
             
