--- a/src/content/pages/gallery.html
+++ b/src/content/pages/gallery.html
@@ -26,6 +26,9 @@ eleventyNavigation:
         <div class="cs-content">
             <span class="cs-topper">Gallery</span>
             <h2 class="cs-title">Our Previous Projects</h2>
+            <br><br>
+            <div class="cs-description"><h3>Welcome to our gallery showcasing the transformations we've brought to life for our satisfied clients. Let us know how we can help bring your vision to reality.
+            </h3></div>
         </div>
         <div class="cs-image-group">
             <div class="cs-row cs-row-1">
