--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,9 @@ eleventyNavigation:
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
             <picture class="cs-background">
-                <source media="(max-width: 600px)" rel="preload" as="image" loading="lazy" srcset="/assets/images/m1.webp">
-                <source media="(min-width: 601px)" rel="preload" as="image" loading="lazy" srcset="/assets/images/1.webp">
-                <img decoding="async" rel="preload" as="image" loading="lazy" src="/assets/images/1.png" alt="" width="2250" height="1500" aria-hidden="true">
+                <source media="(max-width: 600px)" rel="preload" as="image" loading="eager" srcset="/assets/images/m1.webp">
+                <source media="(min-width: 601px)" rel="preload" as="image" loading="eager" srcset="/assets/images/1.webp">
+                <img decoding="async" rel="preload" as="image" loading="eager" src="/assets/images/1.png" alt="" width="2250" height="1500" aria-hidden="true">
             </picture>
             
         </div>
