--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -90,7 +90,7 @@ eleventyNavigation:
             <div class="cs-info">
                 <span class="cs-topper">Contact</span>
                 <span class="cs-detail">Mobile: 780-708-5345</span>
-                <span class="cs-detail">E-mail: maria@montanoplumbing.ca</span>
+                <span class="cs-detail">E-mail:info@montanoplumbing.ca</span>
             </div>
         </div>
     </div>
