--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,7 @@ eleventyNavigation:
                 <picture class="cs-item-background">
                     <source media="(max-width: 600px)" srcset="/assets/images/plumbingserviceshero.jpg">
                     <source media="(min-width: 601px)" srcset="/assets/images/plumbingserviceshero.jpg">
-                    <img decoding="async" src="/assets/images/plumbingserviceshero.jpg" alt="healthcare patient" width="455" height="337" aria-hidden="true">
+                    <img decoding="async" src="/assets/images/plumbingserviceshero.jpg" alt="" width="455" height="337" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -223,7 +223,7 @@ eleventyNavigation:
                 <picture class="cs-item-background">
                     <source media="(max-width: 600px)" srcset="/assets/images/HEATINGHERO.jpg">
                     <source media="(min-width: 601px)" srcset="/assets/images/HEATINGHERO.jpg">
-                    <img decoding="async" src="/assets/images/HEATINGHERO.jpg" alt="healthcare patient" width="455" height="337" aria-hidden="true">
+                    <img decoding="async" src="/assets/images/HEATINGHERO.jpg" alt="" width="455" height="337" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -239,7 +239,7 @@ eleventyNavigation:
                 <picture class="cs-item-background">
                     <source media="(max-width: 600px)" srcset="/assets/images/GASFITTINGHERO.jpg">
                     <source media="(min-width: 601px)" srcset="/assets/images/GASFITTINGHERO.jpg">
-                    <img decoding="async" src="/assets/images/GASFITTINGHERO.jpg" alt="healthcare patient" width="455" height="337" aria-hidden="true">
+                    <img decoding="async" src="/assets/images/GASFITTINGHERO.jpg" alt="" width="455" height="337" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
