--- a/src/content/pages/projects.html
+++ b/src/content/pages/projects.html
@@ -1,5 +1,5 @@
 ---
-title: 'Terms of Service| Code Stitch Web Designs'
+title: 'Terms of Service| Montano Plumbing & Contracting LTD.'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'terms-of-service/'
