--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -1,6 +1,6 @@
 ---
-title: 'Privacy Policy | Code Stitch Web Designs'
-description: 'Meta description for the page'
+title: 'Privacy Policy | Montano Plumbing & Contracting LTD.'
+description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'privacy-policy/'
 eleventyNavigation:
