--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 title: 'Montano Plumbing & Contracting LTD.'
-description: 'Meta description for the page'
+description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/landing.jpg'
 permalink: '/'
 tags: 'sitemap' # Sitemap will use all pages in content/, due to content.json. As index.html is not included in content/ we need to manually add the sitemap tag to this page (only).
