--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -40,6 +40,20 @@ eleventyNavigation:
 </div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
    <!-- ============================================ -->
 <!--                   Contact                    -->
 <!-- ============================================ -->
@@ -100,9 +114,9 @@ eleventyNavigation:
         <iframe class="cs-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d303586.12299794616!2d-113.82305642359843!3d53.526225393386234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53a0224580deff23%3A0x411fa00c4af6155d!2sEdmonton%2C%20AB%2C%20Canada!5e0!3m2!1sen!2sph!4v1721895974333!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         <!--All three graphics use the same src, which is transformed in the CSS. If you want to replace the graphic with another one, simply replace all the src's with the same URL and watch the magic happen!-->
-        <img class="cs-graphic cs-top cs-light" src="/assets/images/contact.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
+        <!-- <img class="cs-graphic cs-top cs-light" src="/assets/images/contact.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
         <img class="cs-graphic cs-left cs-light" src="/assets/images/contact.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
-        <img class="cs-graphic cs-bottom cs-light" src="/assets/images/contact.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
+        <img class="cs-graphic cs-bottom cs-light" src="/assets/images/contact.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" > -->
 
         <!--This is a dark version. Download the images and change the fill color to match the color of the section background below it-->
         <img class="cs-graphic cs-top cs-dark" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/gym-hero-shape-top-dark.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
@@ -123,7 +137,7 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">    </span>
-            <h2 class="cs-title">WE ARE HIRING!</h2>
+            <h2 class="cs-title">We are hiring!</h2>
             <h3 class="cs-text">
                 We are a growing business looking for skilled tradesperson. If you have the drive for success and passion in construction, click the link.            </h3>
            
