--- a/src/content/pages/plumbing-and-heating.html
+++ b/src/content/pages/plumbing-and-heating.html
@@ -2,16 +2,16 @@
 title: 'Plumbing & Heating| Montano Plumbing & Contracting LTD.'
 description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'plumbing-and-heatinggg/'
+permalink: 'plumbing-and-heating/'
 eleventyNavigation:
-
-
+    key: Plumbing & Heating
+    order: 200
 ---
 
 {% extends "layouts/base.html" %}
 
 {% block head %}
-    <link rel="stylesheet" href="/assets/css/about.css">
+    <link rel="stylesheet" href="/assets/css/plumbing-and-heating.css">
 {% endblock %}
 
 {% block body %}
