--- a/src/content/pages/renovation.html
+++ b/src/content/pages/renovation.html
@@ -2,15 +2,16 @@
 title: 'Renovation| Montano Plumbing & Contracting LTD.'
 description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'rrrenovation/'
+permalink: 'renovation/'
 eleventyNavigation:
-   
+    key: Renovation
+    order: 250
 ---
 
 {% extends "layouts/base.html" %}
 
 {% block head %}
-    <link rel="stylesheet" href="/assets/css/services.css">
+    <link rel="stylesheet" href="/assets/css/renovation.css">
 {% endblock %}
 
 {% block body %}
