--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@ eleventyNavigation:
             <picture class="cs-background">
                 <source media="(max-width: 600px)" rel="preload"  decoding="async" as="image" loading="eager" srcset="/assets/images/m1.webp">
                 <source media="(min-width: 601px)" rel="preload"  decoding="async" as="image" loading="eager" srcset="/assets/images/1.webp">
-                <img decoding="async" rel="preload" as="image"   decoding="async"loading="eager" src="/assets/images/1.png" alt="" width="2250" height="1500" aria-hidden="true">
+                <img decoding="async" rel="preload" as="image"   decoding="async"loading="eager" src="/assets/images/1.webp" alt="" width="2250" height="1500" aria-hidden="true">
             </picture>
             
         </div>
