--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@ eleventyNavigation:
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
             <picture class="cs-background">
-                <source media="(max-width: 600px)" rel="preload"  decoding="async" as="image" loading="eager" srcset="/assets/images/m1.webp">
+                <source media="(max-width: 600px)" rel="preload"  decoding="async" as="image" loading="eager" srcset="/assets/images/m1.webp" width="768">
                 <source media="(min-width: 601px)" rel="preload"  decoding="async" as="image" loading="eager" srcset="/assets/images/1.webp">
                 <img decoding="async" rel="preload" as="image"   decoding="async"loading="eager" src="/assets/images/1.webp" alt="" width="2250" height="1500" aria-hidden="true">
             </picture>
