--- a/src/content/pages/renovation.html
+++ b/src/content/pages/renovation.html
@@ -33,9 +33,9 @@ eleventyNavigation:
 
     <!-- Background Image, there's a background image in the CSS for the parallax effect you'll need to change as well if you swap out our images -->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/assets/images/kitchenrenov.jpg">
-        <source media="(min-width: 601px)" srcset="/assets/images/kitchenrenov.jpg">
-        <img decoding="async" src="/assets/images/kitchenrenov.jpg" alt="construction" width="2250" height="1500" aria-hidden="true">
+        <source media="(max-width: 600px)" srcset="/assets/images/kitchenrenov.webp">
+        <source media="(min-width: 601px)" srcset="/assets/images/kitchenrenov.webp">
+        <img decoding="async" src="/assets/images/kitchenrenov.webp" alt="construction" width="2250" height="1500" aria-hidden="true">
     </picture>
 </section>
                
