--- a/src/index.html
+++ b/src/index.html
@@ -221,9 +221,9 @@ eleventyNavigation:
                     </div>
                 </a>
                 <picture class="cs-item-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/HEATINGHERO.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/HEATINGHERO.jpg">
-                    <img decoding="async" src="/assets/images/HEATINGHERO.jpg" alt="" width="455" height="337" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/HEATINGHERO.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/HEATINGHERO.webp">
+                    <img decoding="async" src="/assets/images/HEATINGHERO.webp" alt="" width="455" height="337" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -237,9 +237,9 @@ eleventyNavigation:
                     </div>
                 </a>
                 <picture class="cs-item-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/GASFITTINGHERO.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/GASFITTINGHERO.jpg">
-                    <img decoding="async" src="/assets/images/GASFITTINGHERO.jpg" alt="" width="455" height="337" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/GASFITTINGHERO.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/GASFITTINGHERO.webp">
+                    <img decoding="async" src="/assets/images/GASFITTINGHERO.webp" alt="" width="455" height="337" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -253,9 +253,9 @@ eleventyNavigation:
                     </div>
                 </a>
                 <picture class="cs-item-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/kitchenrenov.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/kitchenrenov.jpg">
-                    <img decoding="async" src="/assets/images/kitchenrenov.jpg" alt="" width="455" height="337" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/kitchenrenov.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/kitchenrenov.webp">
+                    <img decoding="async" src="/assets/images/kitchenrenov.webp" alt="" width="455" height="337" aria-hidden="true">
                 </picture>
             </li>
 
@@ -418,11 +418,11 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <source media="(max-width: 600px)"
-                            srcset="/assets/images/GASFITTINGHERO.jpg">
+                            srcset="/assets/images/GASFITTINGHERO.webp">
                     <source media="(min-width: 601px)"
-                            srcset="/assets/images/GASFITTINGHERO.jpg">
+                            srcset="/assets/images/GASFITTINGHERO.webp">
                     <img decoding="async"
-                            src="/assets/images/GASFITTINGHERO.jpg"
+                            src="/assets/images/GASFITTINGHERO.webp"
                             alt="finance" width="413" height="374" aria-hidden="true" loading="lazy">
                 </picture>
                 <div class="cs-details">
@@ -439,11 +439,11 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <source media="(max-width: 600px)"
-                            srcset="/assets/images/kitchenrenov.jpg">
+                            srcset="/assets/images/kitchenrenov.webp">
                     <source media="(min-width: 601px)"
-                            srcset="/assets/images/kitchenrenov.jpg">
+                            srcset="/assets/images/kitchenrenov.webp">
                     <img decoding="async"
-                            src="/assets/images/kitchenrenov.jpg"
+                            src="/assets/images/kitchenrenov.webp"
                             alt="finance" width="413" height="374" aria-hidden="true" loading="lazy">
                 </picture>
                 <div class="cs-details">
