chore: specific addition of head on every page to avoid duplication

--- a/src/content/pages/Privacy.html
+++ b/src/content/pages/Privacy.html
@@ -17,6 +17,10 @@ title: 'Privacy Policy| Montano Plumbing & Contracting LTD.'
 {% block head %}
 <link rel="stylesheet" href="/assets/css/privacy.css">{% endblock %}
 
+        <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
+        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.png"/>
+        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.png"/>
+
 {% block body %}
 <!-- ============================================ -->
 <!--                  Content                     -->
