--- a/src/content/pages/gallery.html
+++ b/src/content/pages/gallery.html
@@ -13,6 +13,10 @@ eleventyNavigation:
 
 {% block head %}
 <link rel="stylesheet" href="/assets/css/gallery.css">
+
+        <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
+        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.png"/>
+        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.png"/>
 {% endblock %}
 
 {% block body %}
