--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -11,6 +11,10 @@ eleventyNavigation:
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/reviews.css">
+
+        <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
+        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.png"/>
+        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.png"/>
 {% endblock %}
 
 {% block body %}
