--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -14,8 +14,8 @@ eleventyNavigation:
     <link rel="stylesheet" href="/assets/css/about.css">
 
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
-        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.png"/>
-        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.png"/>
+        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
+        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
 {% endblock %}
 
 {% block body %}
