--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -14,8 +14,8 @@ eleventyNavigation:
     <link rel="stylesheet" href="/assets/css/blog.css">
 
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
-        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.png"/>
-        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.png"/>
+        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
+        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
 {% endblock %}
 
 {% block body %}
@@ -64,9 +64,9 @@ eleventyNavigation:
             <ul class="cs-card-group">
                 <li class="cs-item">
                     <picture class="cs-image" aria-hidden="true">
-                        <source media="(max-width: 600px)" srcset="/assets/images/plumbingserviceshero.jpg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/plumbingserviceshero.jpg">
-                        <img loading="lazy" decoding="async" src="/assets/images/plumbingserviceshero.jpg" alt="windmill" width="413" height="320">
+                        <source media="(max-width: 600px)" srcset="/assets/images/plumbingserviceshero.webp">
+                        <source media="(min-width: 601px)" srcset="/assets/images/plumbingserviceshero.webp">
+                        <img loading="lazy" decoding="async" src="/assets/images/plumbingserviceshero.webp" alt="windmill" width="413" height="320">
                     </picture>
                     <div class="cs-flex">
                         <span class="cs-date">29 Oct, 2023</span>
