--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 title: 'Montano Plumbing & Contracting LTD.'
 description: 'Your Trusted Partner for Renovations and Plumbing'
-preloadImg: '/assets/images/landing.jpg'
+preloadImg: '/assets/images/landing.webp'
 permalink: '/'
 tags: 'sitemap' # Sitemap will use all pages in content/, due to content.json. As index.html is not included in content/ we need to manually add the sitemap tag to this page (only).
 eleventyNavigation:
@@ -16,8 +16,8 @@ eleventyNavigation:
     <link rel="stylesheet" href="/assets/css/critical.css"/>
 
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
-        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.png"/>
-        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.png"/>
+        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
+        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
 
     <!-- Script for Netlify Identity -->
     <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
@@ -209,9 +209,9 @@ eleventyNavigation:
                     </div>
                 </a>
                 <picture class="cs-item-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/plumbingserviceshero.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/plumbingserviceshero.jpg">
-                    <img decoding="async" src="/assets/images/plumbingserviceshero.jpg" alt="" width="455" height="337" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/plumbingserviceshero.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/plumbingserviceshero.webp">
+                    <img decoding="async" src="/assets/images/plumbingserviceshero.webp" alt="" width="455" height="337" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
