--- a/src/content/pages/Privacy.html
+++ b/src/content/pages/Privacy.html
@@ -18,8 +18,8 @@ title: 'Privacy Policy| Montano Plumbing & Contracting LTD.'
 <link rel="stylesheet" href="/assets/css/privacy.css">{% endblock %}
 
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
-        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.png"/>
-        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.png"/>
+        <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
+        <meta property="og:image:secure_url" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
 
 {% block body %}
 <!-- ============================================ -->
