--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -178,9 +178,9 @@ eleventyNavigation:
             <!-- Row 3 -->
             <div class="cs-row cs-row-3">
                 <picture class="cs-picture cs-picture-1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/gal7.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/gal7.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/gal7.jpg" alt="new black window structure" width="420" height="625">
+                    <source media="(max-width: 600px)" srcset="/assets/images/gal7.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/gal7.webp">
+                    <img loading="lazy" decoding="async" src="/assets/images/gal7.webp" alt="new black window structure" width="420" height="625">
                 </picture>
                 <picture class="cs-picture cs-picture-2">
                     <source media="(max-width: 600px)" srcset="/assets/images/gal8.jpg">
