--- a/src/index.html
+++ b/src/index.html
@@ -333,9 +333,9 @@ eleventyNavigation:
         </div>
         <div class="cs-stat-group">
             <picture class="cs-background">
-                <source media="(max-width: 600px)" srcset="/assets/images/gal7.jpg">
-                <source media="(min-width: 601px)" srcset="/assets/images/gal7.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/gal7.jpg" alt="leaves" width="842" height="737" aria-hidden="true">
+                <source media="(max-width: 600px)" srcset="/assets/images/gal7.webp">
+                <source media="(min-width: 601px)" srcset="/assets/images/gal7.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/gal7.webp" alt="leaves" width="842" height="737" aria-hidden="true">
             </picture>
            
         </div>
