--- a/src/index.html
+++ b/src/index.html
@@ -380,11 +380,11 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <source media="(max-width: 600px)"
-                            srcset="/assets/images/plumbingtile.jpg">
+                            srcset="/assets/images/plumbingtile.webp">
                     <source media="(min-width: 601px)"
-                            srcset="/assets/images/plumbingtile.jpg">
+                            srcset="/assets/images/plumbingtile.webp">
                     <img decoding="async"
-                            src="/assets/images/plumbingtile.jpg"
+                            src="/assets/images/plumbingtile.webp"
                             alt="finance" width="413" height="374" aria-hidden="true" loading="lazy">
                 </picture>
                 <div class="cs-details">
@@ -401,11 +401,11 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <source media="(max-width: 600px)"
-                            srcset="/assets/images/heatingtile.jpg">
+                            srcset="/assets/images/heatingtile.webp">
                     <source media="(min-width: 601px)"
-                            srcset="/assets/images/heatingtile.jpg">
+                            srcset="/assets/images/heatingtile.webp">
                     <img decoding="async"
-                            src="/assets/images/heatingtile.jpg"
+                            src="/assets/images/heatingtile.webp"
                             alt="finance" width="413" height="374" aria-hidden="true" loading="lazy">
                 </picture>
                 <div class="cs-details">
