chore: explicitly assign a width and height for the image

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@ eleventyNavigation:
             <picture class="cs-background">
                 <source media="(max-width: 600px)" rel="preload"  decoding="async" as="image" loading="eager" srcset="/assets/images/m1.avif">
                 <source media="(min-width: 601px)" rel="preload"  decoding="async" as="image" loading="eager" srcset="/assets/images/1.avif">
-                <img decoding="async" decoding="async"loading="eager" src="/assets/images/1.avif" alt="services text and living room" aria-hidden="true">
+                <img decoding="async" decoding="async"loading="eager" src="/assets/images/1.avif" alt="services text and living room" aria-hidden="true" width="831" height="674" >
             </picture>
             
         </div>
@@ -85,7 +85,7 @@ eleventyNavigation:
             <picture class="cs-background">
                 <source media="(max-width: 600px)" rel="preload"  decoding="async" as="image" loading="eager" srcset="/assets/images/m2.avif">
                 <source media="(min-width: 601px)" rel="preload"  decoding="async" as="image" loading="eager" srcset="/assets/images/2.avif">
-                <img decoding="async" decoding="async" loading="eager" src="/assets/images/2.avif" alt="services text and bathroom" aria-hidden="true">
+                <img decoding="async" decoding="async" loading="eager" src="/assets/images/2.avif" alt="services text and bathroom" aria-hidden="true" width="831" height="674" >
             </picture>
         </div>
         <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
@@ -96,7 +96,7 @@ eleventyNavigation:
             <picture class="cs-background">
                 <source media="(max-width: 600px)" rel="preload"  decoding="async" as="image" loading="eager" srcset="/assets/images/m3.avif">
                 <source media="(min-width: 601px)" rel="preload"  decoding="async" as="image" loading="eager" srcset="/assets/images/3.avif">
-                <img fetchpriority="high" decoding="async" loading="eager" src="/assets/images/3.avif" alt="services text and attic" aria-hidden="true">
+                <img fetchpriority="high" decoding="async" loading="eager" src="/assets/images/3.avif" alt="services text and attic" aria-hidden="true" width="831" height="674" >
             </picture>
         </div>
         <label for="carousel-3" class="carousel-control prev control-1">‹</label>
