fix: defer root.css

--- a/src/index.html
+++ b/src/index.html
@@ -218,7 +218,7 @@ eleventyNavigation:
                 <picture class="cs-item-background">
                     <source media="(max-width: 600px)" srcset="/assets/images/plumbingserviceshero-min.webp">
                     <source media="(min-width: 601px)" srcset="/assets/images/plumbingserviceshero-min.webp">
-                    <img decoding="async" src="/assets/images/plumbingserviceshero-min.webp" alt="" width="455" height="337" aria-hidden="true">
+                    <img decoding="async" loading="lazy" src="/assets/images/plumbingserviceshero-min.webp" alt="" width="455" height="337" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -234,7 +234,7 @@ eleventyNavigation:
                 <picture class="cs-item-background">
                     <source media="(max-width: 600px)" srcset="/assets/images/HEATINGHERO.webp">
                     <source media="(min-width: 601px)" srcset="/assets/images/HEATINGHERO.webp">
-                    <img decoding="async" src="/assets/images/HEATINGHERO.webp" alt="" width="455" height="337" aria-hidden="true">
+                    <img decoding="async" loading="lazy" src="/assets/images/HEATINGHERO.webp" alt="" width="455" height="337" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -250,7 +250,7 @@ eleventyNavigation:
                 <picture class="cs-item-background">
                     <source media="(max-width: 600px)" srcset="/assets/images/GASFITTINGHERO.webp">
                     <source media="(min-width: 601px)" srcset="/assets/images/GASFITTINGHERO.webp">
-                    <img decoding="async" src="/assets/images/GASFITTINGHERO.webp" alt="" width="455" height="337" aria-hidden="true">
+                    <img decoding="async" loading="lazy" src="/assets/images/GASFITTINGHERO.webp" alt="" width="455" height="337" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -266,7 +266,7 @@ eleventyNavigation:
                 <picture class="cs-item-background">
                     <source media="(max-width: 600px)" srcset="/assets/images/kitchenrenov.webp">
                     <source media="(min-width: 601px)" srcset="/assets/images/kitchenrenov.webp">
-                    <img decoding="async" src="/assets/images/kitchenrenov.webp" alt="" width="455" height="337" aria-hidden="true">
+                    <img decoding="async" loading="lazy" src="/assets/images/kitchenrenov.webp" alt="" width="455" height="337" aria-hidden="true">
                 </picture>
             </li>
 
@@ -610,7 +610,7 @@ eleventyNavigation:
                 <source media="(max-width: 600px)" srcset="/assets/images/mpclogo1.png">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" srcset="/assets/images/mpclogo1.png">
-                <img decoding="async" src="/assets/images/mpclogo1.png" alt="person" width="542" height="520" aria-hidden="true">
+                <img decoding="async" loading="lazy" src="/assets/images/mpclogo1.png" alt="person" width="542" height="520" aria-hidden="true">
             </picture>
         </div>
     </div>
