chore: scaffolding hero page and hiding the page

--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -4,11 +4,11 @@ description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'renovation/fence-deck-install/'
 eleventyNavigation:
-    key: 'Fence & Deck Installation'
-    parent: 'Renovation'
-    order: '2520'
 ---
 
+    <!-- key: 'Fence & Deck Installation' -->
+    <!-- order: '2520' -->
+    <!-- parent: 'Renovation' -->
 {% extends "layouts/base.html" %}
 
 {% block head %}
@@ -28,9 +28,9 @@ eleventyNavigation:
 <section id="hero-1950">
     <div class="cs-container">
         <div class="cs-content">
-            <h1 class="cs-title">We do not cook, we create your emotions!</h1>
+            <h1 class="cs-title">Fence and Deck Installation – Beautiful, Durable, and Affordable!</h1>
             <div class="cs-flex-group">
-                <p class="cs-text">My passion for food has brought many new, fun and delicious dishes to the table.</p>
+                <p class="cs-text">Looking to upgrade your outdoor space with a custom fence or deck? Whether you're improving an older home or adding a new touch to a fresh build, we specialize in creating beautiful and lasting outdoor spaces that you'll love.</p>
                 <a href="" class="cs-button-solid">Read More</a>
             </div>
         </div>
@@ -88,6 +88,17 @@ eleventyNavigation:
                     </p>
                 </div>
             </li>
+            <li class="cs-item">
+                <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fballs1.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
+                <!-- Text Grouped For Flexbox-->
+                <div class="cs-text-group">
+                    <h3 class="cs-h3">Unique and adaptive equipment</h3>
+                    <p class="cs-item-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa fugiat impedit molestias vitae voluptatibus sed enim! Cupiditate ab praesentium dolorem libero veritatis beatae assumenda totam, in, nemo quis consectetur labore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, quam?
+                    </p>
+                </div>
+            </li>
+
             <li class="cs-item">
                 <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fballs1.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
                 <!-- Text Grouped For Flexbox-->
